--- a/.gitattributes
+++ b/.gitattributes
@@ -62,5 +62,5 @@
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
 
-*.cpp linguist-language=c++
-*.hpp linguist-language=c++
+/Sample/*.cpp linguist-language=C++
+/Sample/*.hpp linguist-language=C++
